--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST=tu_host_mysql
+DB_HOST=localhost
 DB_PORT=3306
-DB_USER=tu_usuario
-DB_PASSWORD=tu_password
+DB_USER=root
+DB_PASSWORD=
 DB_DATABASE=CavoshCafe
